Bug 324462 - Calendar input field ignores date in text field
Summary: Calendar input field ignores date in text field
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.10.5
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-09-03 16:02 UTC by Sven Wehner
Modified: 2013-09-03 20:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Wehner 2013-09-03 16:02:53 UTC
When entering a birthday (date string) for a person in the calendar menu's text field, the date seems to be ignored. Only when you open the calendar menu again, the previously entered date is chosen correctly.

I suggest connecting text field and calendar widget. So that changing one, changes the other one as well.

Additionally, it would be great if the text field would receive default focus, so you can directly type the date without clicking the text field first.

Reproducible: Always

Steps to Reproduce:
1. Add a new contact.
2. Start adding a birthday in the "Personal" tab by clicking the calendar icon (candle in front of calendar).
3. Enter the birthday in the text field. E.g.: "01.01.2000" (Note: I use German date format, I don't know what the default format looks like.)
4. Press enter on your keyboard.
5. Realize that the entered date has been ignored, and only the selected date in the calendar widget seems to matter.
Comment 1 Laurent Montel 2013-09-03 20:20:00 UTC
I confirm it
Comment 2 Laurent Montel 2013-09-03 20:28:37 UTC
Git commit d7df29591ad0186a224ed73376fbcb2e40333575 by Montel Laurent.
Committed on 03/09/2013 at 20:28.
Pushed by mlaurent into branch 'KDE/4.11'.

Fix Bug 324462 - Calendar input field ignores date in text field

FIXED-IN: 4.11.2

M  +4    -9    akonadi/contact/editor/kdatepickerpopup.cpp
M  +0    -1    akonadi/contact/editor/kdatepickerpopup_p.h

http://commits.kde.org/kdepimlibs/d7df29591ad0186a224ed73376fbcb2e40333575