Fix Bug 324462 - Calendar input field ignores date in text field

FIXED-IN: 4.11.2
BUG: 324462